<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">齐游</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_searchText">春节出游享受1折旅行</string>
    <string name="sun_refresh_style">Sun refresh style</string>
    <string name="jet_refresh_style">Jet refresh style</string>
    <string name="polite_message">Wait a moment please. Breathe deeply and watch beautiful animation.</string>
    <string name="translate_type">配送方式</string>
    <string name="translate_free">快递 包邮</string>
    <string name="translate_insur">运费险</string>
    <string name="trip_to_india">常州环球恐龙城非常好</string>
    <string name="trip_to_italy">北京故宫非常好玩</string>
    <string name="trip_to_indonesia">郑州世纪欢乐园非常好玩</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间:</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="adapter_cost_buy">$899    已有1.2万人购买</string>
    <string name="adapter_content">常州是长江文明和吴文化的发源地之一，也是南朝齐梁故里。[3]  常州境内风景名胜、历史古迹较多，有中华恐龙园、嬉戏谷、春秋淹城等主题公园和天目湖、南山、太湖湾等自然风景区。</string>
    <string name="adapter_time">2016-1-1 旅游时间</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">已无更多数据</string>
    <string name="spot_cost">$899</string>
    <string name="spot_buy">已有1.2万人购买</string>
    <string name="spot_place">常州</string>
    <string name="spot_introduction">梅园坐落在泰州市区东郊、有着美丽传说的凤凰墩上。梅兰芳公园中有“四绝”最值得一看。梅亭为园中一绝；二绝为梅兰芳大型半身汉白玉雕像；陈列厅外水池中间的梅兰芳，在《太真外传》中饰演的杨太真大型汉白玉的艺术形象亦称得上第三绝；第四绝则为一座巨型石碑，上书赵朴初先生来泰时所作《踏莎行》词一首。</string>
    <string name="spot_name">梅兰芳公园</string>
    <string name="spot_show">景点简介</string>
    <string name="spot_evaluate">景点评价</string>
    <string name="spot_showname">景点名称</string>
    <string name="spot_open_time">景点开放时间</string>
    <string name="spot_detail">景点详情</string>
    <string name="spot_open">8: 00～17: 30</string>
    <string name="spot_trans">景点交通</string>
    <string name="spot_trans_info">迎春东路90号。乘7、10、19、22、36路车可达。</string>
    <string name="buy_num">购买数量</string>
    <string name="buy_ok_num">x1</string>
    <string name="buy_reduce">-</string>
    <string name="buy_add">+</string>
    <string name="buy_ok">订单确认</string>
    <string name="buy_pref">优惠减免200元</string>
    <string name="buy_number_ens">共1件商品</string>
    <string name="buy_leave_info">给卖家留言</string>
    <string name="buy_no_name">匿名购买</string>
    <string name="loading">正在拼命加载数据中.....</string>
    <string name="username">Limitless</string>
    <string name="travel_city">北京</string>
    <string name="travel_city_info">帝都风光</string>
    <string name="travel_prinvince">省份</string>
    <string name="travel_judge">评论</string>
    <string name="travel_love">喜欢</string>
    <string name="share">分享</string>
    <string name="love_num">800</string>
    <string name="text_num">78</string>
    <string name="picture">图</string>
    <string name="watch_num">160000</string>
    <string name="text_a">说走就走的旅行</string>
    <string name="image_zhuanti">图片专题</string>
    <string name="more">更多</string>
    <string name="words_name">旅游心得体会</string>
    <string name="words_answer">内容，60字以内</string>
    <string name="words_face">表情</string>
    <string name="words_coment">内容，100字以内</string>
    <string name="detail">景点专题</string>
    <string name="zhuanti_detail">选择了鹰航，印尼国家航空，据说有些五星服务的航班，当然也有着与五星相匹配的价格。飞行时间7小时，直飞，提前给希曼申请了睡篮和婴儿餐，国际上标准规定是9kg，75cm以下，希曼都已经超标，好在空姐都很nice，于是宝宝有了这一次美妙的航空体验。半夜起床，略有些烦躁，经历了登机最初的好奇，起飞时刻的不适（喂水即可，鹰航起飞很平稳，耳鸣不严重），迎来了平稳的飞行，提前准备好的新鲜玩具招呼上，小爷状态还不错。三个多小时后，开始闹觉，着实有点焦头烂额，哄了一会，眯着了，睡篮也送来了，宝贝安稳的睡了2个多小时，降落前夕醒来，吃吃喝喝，迎着扑面而来的热浪，飞机降落在了登巴萨机场…落地签的地方，宝贝第一次见到大规模的外国人，好奇的小眼睛都瞪大了，哎哎地打着招呼，各种游客都很友好的逗着小宝。。


旅行，看上去是个愉快的开始~</string>
    <string name="str_orange">#fe7b27</string>
    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>

</resources>